<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:padding="3.5pt"
    android:layout_height="match_parent"
    tools:context=".admin_dashboard"
    android:background="#E7E7E7">
    <TextView
        android:id="@+id/btn_s_detail"
        android:layout_width="110dp"
        android:layout_height="40dp"
        android:textStyle="bold"
        android:textColor="#fff"
        android:padding="3pt"
        android:background="#ffa339"
        android:layout_marginTop="7dp"
        android:layout_marginLeft="8dp"
        android:textAlignment="center"
        android:text="@string/student_detail"/>
    <android.support.v7.widget.AppCompatImageButton
        android:id="@+id/btn_s_dc"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:src="@drawable/student_cloud_xhdpi"
        android:scaleType="fitCenter"
        android:layout_marginLeft="8dp"
        android:onClick="click1"
        android:layout_below="@id/btn_s_detail"
        android:background="@drawable/rectangle_button" />
    <TextView
        android:id="@+id/btn_f_detail"
        android:layout_width="110dp"
        android:layout_height="40dp"
        android:textStyle="bold"
        android:textColor="#fff"
        android:padding="3pt"
        android:background="#02a7a8"
        android:layout_marginTop="7dp"
        android:layout_marginLeft="127dp"
        android:textAlignment="center"
        android:text="@string/faculty_detail"/>
    <android.support.v7.widget.AppCompatImageButton
        android:id="@+id/btn_f_dc"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:src="@drawable/faculty"
        android:scaleType="fitCenter"
        android:layout_marginLeft="127dp"
        android:onClick="click1"
        android:layout_below="@id/btn_f_detail"
        android:background="@drawable/rectangle_button" />
    <TextView
        android:id="@+id/btn_f_signup"
        android:layout_width="110dp"
        android:layout_height="40dp"
        android:textStyle="bold"
        android:textColor="#fff"
        android:padding="3pt"
        android:background="#e5877f"
        android:layout_marginTop="7dp"
        android:textSize="12.2sp"
        android:layout_marginLeft="250dp"
        android:textAlignment="center"
        android:text="@string/faculty_signup"/>
    <android.support.v7.widget.AppCompatImageButton
        android:id="@+id/btn_faculty_signup"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_marginLeft="250dp"
        android:src="@drawable/faculty_register"
        android:scaleType="fitCenter"
        android:layout_below="@id/btn_f_signup"
        android:background="@drawable/rectangle_button"/>
    <TextView
        android:id="@+id/btn_s_statuse"
        android:layout_width="110dp"
        android:layout_height="40dp"
        android:textStyle="bold"
        android:textColor="#fff"
        android:padding="3pt"
        android:background="#6ec4c2"
        android:layout_marginTop="170dp"
        android:layout_marginLeft="8dp"
        android:textAlignment="center"
        android:text="@string/student_status"/>
    <android.support.v7.widget.AppCompatImageButton
        android:id="@+id/btn_student_status"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_marginLeft="8dp"
        android:src="@drawable/status"
        android:scaleType="fitCenter"
        android:padding="5pt"
        android:layout_below="@id/btn_s_statuse"
        android:background="@drawable/rectangle_button" />
    <TextView
        android:id="@+id/btn_subject"
        android:layout_width="110dp"
        android:layout_height="40dp"
        android:textStyle="bold"
        android:textColor="#fff"
        android:padding="3pt"
        android:background="#D86854"
        android:layout_marginTop="170dp"
        android:layout_marginLeft="127dp"
        android:textAlignment="center"
        android:text="@string/college"/>
    <android.support.v7.widget.AppCompatImageButton
        android:id="@+id/btn_csubject"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_marginLeft="127dp"
        android:src="@drawable/school_512"
        android:scaleType="fitCenter"
        android:padding="5pt"
        android:onClick="click1"
        android:layout_below="@id/btn_subject"
        android:background="@drawable/rectangle_button" />
    <TextView
        android:id="@+id/btn_section"
        android:layout_width="110dp"
        android:layout_height="40dp"
        android:textStyle="bold"
        android:textColor="#fff"
        android:padding="3pt"
        android:background="#1A8574"
        android:layout_marginTop="170dp"
        android:layout_marginLeft="250dp"
        android:textAlignment="center"
        android:text="@string/parents"/>
    <android.support.v7.widget.AppCompatImageButton
        android:id="@+id/btn_csection"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_marginLeft="250dp"
        android:src="@drawable/parents"
        android:scaleType="fitCenter"
        android:layout_below="@id/btn_section"
        android:onClick="click1"
        android:background="@drawable/rectangle_button"/>
    <TextView
        android:id="@+id/btn_class"
        android:layout_width="110dp"
        android:layout_height="40dp"
        android:textStyle="bold"
        android:textColor="#fff"
        android:padding="3pt"
        android:background="#066278"
        android:layout_marginTop="330dp"
        android:layout_marginLeft="8dp"
        android:textAlignment="center"
        android:text="@string/classes"/>
    <android.support.v7.widget.AppCompatImageButton
        android:id="@+id/btn_cclass"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_marginLeft="8dp"
        android:onClick="click1"
        android:src="@drawable/classe"
        android:scaleType="fitCenter"
        android:layout_below="@id/btn_class"
        android:background="@drawable/rectangle_button" />
    <TextView
        android:id="@+id/btn_exam"
        android:layout_width="110dp"
        android:layout_height="40dp"
        android:textStyle="bold"
        android:textColor="#fff"
        android:padding="3pt"
        android:background="#6EC4C2"
        android:layout_marginTop="330dp"
        android:layout_marginLeft="127dp"
        android:textAlignment="center"
        android:text="@string/exam"/>
    <android.support.v7.widget.AppCompatImageButton
        android:id="@+id/btn_cexam"
        android:layout_width="110dp"
        android:src="@drawable/exams"
        android:scaleType="fitCenter"
        android:onClick="click1"
        android:layout_height="110dp"
        android:layout_marginLeft="127dp"
        android:layout_below="@id/btn_exam"
        android:background="@drawable/rectangle_button" />
    <TextView
        android:id="@+id/btn_library"
        android:layout_width="110dp"
        android:layout_height="40dp"
        android:textStyle="bold"
        android:textColor="#fff"
        android:padding="3pt"
        android:background="#E5877F"
        android:layout_marginTop="330dp"
        android:layout_marginLeft="250dp"
        android:textAlignment="center"
        android:text="@string/library"/>
    <android.support.v7.widget.AppCompatImageButton
        android:id="@+id/btn_clibrary"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_marginLeft="250dp"
        android:src="@drawable/library"
        android:scaleType="fitCenter"
        android:onClick="click1"
        android:layout_below="@id/btn_library"
        android:background="@drawable/rectangle_button" />
</RelativeLayout>
